--- a/pom.xml
+++ b/pom.xml
@@ -25,3 +25,18 @@
     </dependencies>
 
 </project>
+
+
+<project>
+...
+<build>
+    ...
+    <plugins>
+        <plugin>
+            <groupId>com.heroku.sdk</groupId>
+            <artifactId>heroku-maven-plugin</artifactId>
+            <version>2.0.16</version>
+        </plugin>
+    </plugins>
+</build>
+</project>
