--- a/pom.xml
+++ b/pom.xml
@@ -40,3 +40,9 @@
     </plugins>
 </build>
 </project>
+<configuration>
+...
+<processTypes>
+    <web>java $JAVA_OPTS -cp target/classes:target/dependency/* Main</web>
+</processTypes>
+</configuration>
