--- a/pom.xml
+++ b/pom.xml
@@ -24,5 +24,15 @@
 
     </dependencies>
 
+    <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.0</version>
+        <configuration>
+            <source>13</source>
+            <target>13</target>
+        </configuration>
+    </plugin>
+
 </project>
 
